[gd_scene load_steps=11 format=3 uid="uid://di5m7q1dn3fnr"]

[ext_resource type="Script" path="res://assets/emergency_button/emergency_button.gd" id="1_prbu4"]
[ext_resource type="AudioStream" uid="uid://c60qouotpjt2e" path="res://Sounds/buttom click.mp3" id="2_83xw7"]
[ext_resource type="ArrayMesh" uid="uid://bimr16p6fhs7g" path="res://assets/emergency_button/emergencybuttonbase.obj" id="2_qtjl3"]
[ext_resource type="ArrayMesh" uid="uid://bmo1jhxdbnscw" path="res://assets/emergency_button/emergencybuttoncase.obj" id="3_60p6m"]
[ext_resource type="ArrayMesh" uid="uid://6boxsmokkpeq" path="res://background_objects/waterdrop.obj" id="4_qw556"]

[sub_resource type="Animation" id="Animation_6om63"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Case:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer3D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_spnc7"]
resource_name = "open_cover"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Case:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 0.0358968),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.90415, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer3D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ovpy3"]
_data = {
"RESET": SubResource("Animation_6om63"),
"open_cover": SubResource("Animation_spnc7")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_auknc"]
height = 0.432053
radius = 0.431344

[sub_resource type="SphereShape3D" id="SphereShape3D_qse8y"]
radius = 0.134553

[node name="EmergencyButton" type="Node3D"]
script = ExtResource("1_prbu4")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.422524, 0.507298, 1.19468)
stream = ExtResource("2_83xw7")
volume_db = 2.078

[node name="DropCover" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ovpy3")
}

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="Emergencybuttonbase" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.20828, -3.23201, -0.0649607)
mesh = ExtResource("2_qtjl3")

[node name="Case" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0790348, 0.063053, 0.850589)

[node name="Emergencybuttoncase" type="MeshInstance3D" parent="Case"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.13062, -3.30759, -0.926734)
mesh = ExtResource("3_60p6m")
skeleton = NodePath("../..")

[node name="ButtonCase" type="Area3D" parent="Case"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Case/ButtonCase"]
transform = Transform3D(1, 0, 0, 0, -0.00174539, 0.999998, 0, -0.999998, -0.00174539, 0.40544, 0.460125, 0.206931)
shape = SubResource("CylinderShape3D_auknc")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(2.50376, 0, 0, 0, 2.51352, 0, 0, 0, 1.018, 0.6396, 0.203089, 0.800002)

[node name="Waterdrop" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(0.142377, 0, 0, 0, 0.135887, 0, 0, 0, 0.13097, -1.93137, -1.23309, -0.369782)
mesh = ExtResource("4_qw556")
skeleton = NodePath("../..")

[node name="Button" type="Area3D" parent="Node3D"]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0640516, 0.122691, 0.126831)
shape = SubResource("SphereShape3D_qse8y")

[connection signal="animation_finished" from="DropCover" to="." method="_on_drop_cover_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="mouse_entered" from="Case/ButtonCase" to="." method="_on_button_case_mouse_entered"]
[connection signal="mouse_exited" from="Case/ButtonCase" to="." method="_on_button_case_mouse_exited"]
[connection signal="mouse_entered" from="Node3D/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Node3D/Button" to="." method="_on_button_mouse_exited"]
